--- a/src/app/forces/forces.component.html
+++ b/src/app/forces/forces.component.html
@@ -1,13 +1,11 @@
 <div class="card bg-light">     
     <div class="card-body">
-        <div class="card-title fs-3 text-center">Uk Police Forces</div>
+        <div class="card-title fs-3 text-center">UK Police Forces</div>
         <hr>
         <div class="row"> 
             <div class="col-md-5">
                 <div class="card">
                     <div class="card-body">
-                        <h5>UK Police Forces</h5>
-                        <hr>
                         <app-force-list></app-force-list>
                     </div>
                 </div>
