Completed Force Detail Calls

--- a/src/app/forces/force-list/force-list-item/force-list-item.component.html
+++ b/src/app/forces/force-list/force-list-item/force-list-item.component.html
@@ -1,6 +1,8 @@
 <a
     style="cursor: pointer;"
+    [routerLink]="[index]"
+    routerLinkActive="active"
     class="list-group-item clearfix">
-    <p class="text-center">{{ force }}<p>
+    <p class="list-group-item-heading text-center">{{ force }}<p>
 </a>
 
