--- a/src/app/forces/force-detail/force-detail.component.html
+++ b/src/app/forces/force-detail/force-detail.component.html
@@ -1,1 +1,18 @@
-<p>force-detail works!</p>
+<div class="row">
+    <h3 class="text-center">{{force.name}}</h3>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <p>{{force.description}}</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-2 text-center"></div>
+    <div class="col-md-8 col-xs-12 text-center">
+        <button class="btn btn-primary">Access Police Force Crime Data</button>
+    </div>
+    <div class="col-md-2 text-center"></div>
+    
+    
+</div>
+
