Updated Police-info Componant

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,7 +23,7 @@
 			  <a 
 			  	class="nav-link active" 
 				aria-current="page" 
-				routerLink="/police-info">Police Info</a>
+				routerLink="/police-info">Crime Information</a>
 		  </li>
 		</ul>
 	  </div>
