--- a/src/app/forces/forces.component.html
+++ b/src/app/forces/forces.component.html
@@ -15,7 +15,11 @@
                 <div class="card">
                     <div class="card-body">
                         <router-outlet *ngIf="!isLoading"></router-outlet>
-                        <p *ngIf="isLoading">Loading ....... </p>
+                        <div class="spinner-border text-primary"
+                             role="status"
+                             *ngIf="isLoading">
+                            <span class="visually-hidden text-center"></span>
+                        </div>
                     </div>
                 </div>
             </div>
