--- a/src/app/police-info/police-info.component.html
+++ b/src/app/police-info/police-info.component.html
@@ -1,1 +1,9 @@
-<p>police-info works!</p>
+<div class="card bg-light">     
+    <div class="card-body">
+        <div class="card-title fs-3 text-center">Crime Information</div>
+        <hr>
+        <div class="row"> 
+            <router-outlet></router-outlet>   
+        </div>       
+    </div>
+</div>
