Completed Police-Info & Tidy up.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,10 @@
 	<div class="row text-center" style="background: #202086; color: white;">
 			<h2>DATA.POLICE.UK</h2>
 	</div>
-  <div class="row">
+  <div class="row text-center">
     <h1 class="p-2" style="text-align: center;">UK Police Data Viewer</h1>
+	<p>All data is taken from the Data.Police.UK API</p>
+	<p>You can view the APi and Documentation here: <a href="data.police.uk">data.police.uk</a></p>
   </div>
 	<hr>
 	<div class="row">
