--- a/src/app/forces/force-detail/force-start/force-start.component.html
+++ b/src/app/forces/force-detail/force-start/force-start.component.html
@@ -1,1 +1,2 @@
-<h4 class="text-center "><em>Select a Force to view</em> </h4>
+<h4 class="text-center "><em>Select a Force to view</em></h4>
+<p class="alert alert-success">Crime Data is only availble for those Forces with the <i class="bi bi-clipboard-data icon-green"></i> icon.</p>
