--- a/src/app/forces/force-list/force-list-item/force-list-item.component.html
+++ b/src/app/forces/force-list/force-list-item/force-list-item.component.html
@@ -3,6 +3,9 @@
     [routerLink]="[index]"
     routerLinkActive="active"
     class="list-group-item clearfix">
-    <p class="list-group-item-heading text-center">{{ force }}<p>
+    <p class="list-group-item-heading text-center">{{ force }}  
+        <i class="bi bi-clipboard-data icon-green"
+            *ngIf="data"></i><p>
+    
 </a>
 
