--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<div class="container-fluid">
 	  <a class="navbar-brand" href="#">
-      <img src="assets/angular.svg" alt="" class="d-inline-block align-text-top" alt="Angular img" width="30" height="24"> JHub Module 1b</a>
+      <img src="assets/angular.svg" alt="" class="d-inline-block align-text-top" alt="Angular img" width="30" height="24"> JHub Module 1b - Martyn Jones</a>
 	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	  </button>
