--- a/src/app/police-info/crime-data/crime-data.component.html
+++ b/src/app/police-info/crime-data/crime-data.component.html
@@ -15,13 +15,13 @@
 <div class="row">
     
 </div>
-<div class="row text-center fs-3" *ngIf="citySelected"><h4>Street Level Crimes in {{citySelected}}</h4> </div>
+<div class="row text-center fs-3" *ngIf="citySelected && !errorCode"><h4>Street Level Crimes in {{citySelected}}</h4> </div>
 <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-10">
         <form class="form-group" 
               (ngSubmit)="onCatagoryChanged()"
-              *ngIf="!isLoading && citySelected">
+              *ngIf="!isLoading && citySelected && !errorCode">
                 <div class="row">
                     <div class="col-md-2"></div>
                     <div class="col-md-6">
@@ -52,10 +52,16 @@
     </div>
     <router-outlet></router-outlet>
     <app-crime-item 
-        *ngIf="showCrimes"
+        *ngIf="showCrimes && !errorCode"
         [crimeData]="crimedata"
         [crimeCatagory]="selectedCatagory"
         [totalCrimes]="totalCrimes"></app-crime-item>
+    <div class="alert alert-danger"
+         *ngIf="errorCode">
+            <h4>An Error Occured when accessing the Police.Data.UK API</h4>
+            <p>{{errorCode}}</p>
+            <p>Try refreshing the page to clear.</p>
+        </div>
 </div>
 
 
