--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<div class="container-fluid">
-	  <a class="navbar-brand" href="#">
-      <img src="assets/angular.svg" alt="" class="d-inline-block align-text-top" alt="Angular img" width="30" height="24"> JHub Module 1b - Martyn Jones</a>
-	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+	  <div class="navbar-header">
+		
+		<a class="navbar-brand" routerLink="/forces">
+			<img src="assets/angular.svg" alt="" class="d-inline-block align-text-top" alt="Angular img" width="30" height="24"> 
+			JHub Module 1b - Martyn Jones
+		</a>
+		<!-- <button type="button" class="navbar-toggle" (click)="collapsed = !collapsed">
+			<span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
+		</button> -->
+		<button class="navbar-toggler" 
+				type="button" 
+				data-bs-toggle="collapse" 
+				data-bs-target="#navMenu" 
+				aria-controls="navMenu" 
+				aria-expanded="false" 
+				aria-label="Toggle navigation"
+				(click)="collapsed = !collapsed">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+	  </div>
+	  <div class="navbar-collapse" id="navMenu" [class.collapse]="collapsed" (resize)="collapsed = true">
 		<ul class="navbar-nav">
 		  <li 
 		  	class="nav-item"
